Fix TestURLRequestContext's code to create a ChannelIDService.

When it created one, it was failing to set it on the HttpNetworkSession.
When it was passed one that was already created, it was doing this
correctly, which is why it didn't break any tests.

BUG=604482

Review URL: https://codereview.chromium.org/1893393003

Cr-Commit-Position: refs/heads/master@{#388046}

Former-commit-id: 7fc5f25f7b609fec07ae9e3c70315abbcd6313e1